# dbeetle

./: .gitignore  AUTHORS.md  CMakeLists.txt  build.sh  dependencies.txt  run.sh  test.sh
.github/workflows/: ci.yml
cmake/: CMakeLists.txt
cmake/tests/: CMakeLists.txt  config.yml
cmake/tests/src/: test_config_arg_parser.c  test_config_loader.c
include/: arguments.h  config_parser.h  dbeetle.h  globals.h
scripts/: check-unit-tests.sh  run-mem-safety.sh
src/: 000_args.c  000_config_parser.c  001_config_parser.c  args.c  dbeetle.c  main.c  print.c
